赛事赛程1左边

--- a/V1/saishisaicheng1.html
+++ b/V1/saishisaicheng1.html
@@ -88,7 +88,7 @@
                         <img src="./images/more.png" alt="" class="game_title_more">
                     </div>
                     <div class="game_detail">
-                        <ul class="game_detail_ul">
+                        <ul class="game_detail_ul clearfix">
                             <li class="active">
                                 <a href="##">
                                     <div class="game_detail_img1">
@@ -97,8 +97,22 @@
                                     <span>GAME 1</span>
                                 </a>
                             </li>
-
-
+                            <li class="">
+                                <a href="##">
+                                    <div class="game_detail_img1">
+                                        <img src="./images/game_detail1.png" alt="">
+                                    </div>
+                                    <span>GAME 1</span>
+                                </a>
+                            </li>
+                            <li class="">
+                                <a href="##">
+                                    <div class="game_detail_img1">
+                                        <img src="./images/game_detail1.png" alt="">
+                                    </div>
+                                    <span>GAME 1</span>
+                                </a>
+                            </li>
                             <li class="">
                                 <a href="##">
                                     <div class="game_detail_img1">
@@ -524,7 +538,162 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="vs_data2_item">2</div>
+                                        <div class="vs_data2_item">
+                                            <div class="left">
+                                                <div class="vs_data_combat">
+                                                    <div class="progress1_parent">
+                                                        <div class="progress1 blue">
+                                                            <span style="width: 40%;"><span>95721</span></span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="vs_data_combat">
+                                                    <div class="progress1_parent">
+                                                        <div class="progress1">
+                                                            <span style="width: 60%;"><span>120529</span></span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="vs_data_combat">
+                                                    <div class="progress1_parent">
+                                                        <div class="progress1">
+                                                            <span style="width: 100%;"><span>120529</span></span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="vs_data_combat">
+                                                    <div class="progress1_parent">
+                                                        <div class="progress1">
+                                                            <span style="width: 40%;"><span>95721</span></span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="vs_data_combat">
+                                                    <div class="progress1_parent">
+                                                        <div class="progress1">
+                                                            <span style="width: 60%;"><span>120529</span></span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="left right">
+                                                <div class="vs_data_combat">
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                    <div class="progress1_parent">
+                                                        <div class="progress2">
+                                                            <span style="width: 40%;"><span>95721</span></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="vs_data_combat">
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                    <div class="progress1_parent">
+                                                        <div class="progress2">
+                                                            <span style="width: 60%;"><span>120529</span></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="vs_data_combat">
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                    <div class="progress1_parent">
+                                                        <div class="progress2">
+                                                            <span style="width: 100%;"><span>120529</span></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="vs_data_combat">
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                    <div class="progress1_parent">
+                                                        <div class="progress2">
+                                                            <span style="width: 40%;"><span>95721</span></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="vs_data_combat">
+                                                    <div class="vs_player">
+                                                        <div class="vs_player_game">
+                                                            <img src="./images/bans1.png" alt="" class="imgauto">
+                                                        </div>
+                                                        <div class="vs_player_reality">
+                                                            <img src="./images/bans2.png" alt="" class="imgauto">
+                                                        </div>
+                                                    </div>
+                                                    <div class="progress1_parent">
+                                                        <div class="progress2">
+                                                            <span style="width: 60%;"><span>120529</span></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <div class="vs_data2_item">3</div>
                                         <div class="vs_data2_item">4</div>
                                         <div class="vs_data2_item">5</div>
@@ -1567,6 +1736,22 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="game_news">
+                        <div class="title clearfix">
+                            <div class="fl clearfix">
+                                <div class="game_fire fl">
+                                    <img class="imgauto" src="./images/game_fire.png" alt="">
+                                </div>
+                                <span class="fl">近期赛事</span>
+                            </div>
+                            <div class="more fr">
+                                <a href="##">
+                                    <span>更多</span>
+                                    <img src="./images/more.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1612,10 +1797,10 @@
             // $(".game_team_div").removeClass("active").eq($(this).index()).addClass("active");
         })
 
-        if ($(".game_detail_ul li").length > 5) {
-            console.log($(".game_detail_ul li").length)
-            $(".game_detail_ul li").addClass("active1")
-        }
+        // if ($(".game_detail_ul li").length > 5) {
+        //     console.log($(".game_detail_ul li").length)
+        //     $(".game_detail_ul li").addClass("active1")
+        // }
 
         $(".game_before_after").on("click", 'li', function () {
             $(".game_before_after li").removeClass("active").eq($(this).index()).addClass("active");
