--- a/V1/index.html
+++ b/V1/index.html
@@ -1398,11 +1398,12 @@
     <script src="./js/bootstrap.js"></script>
     <script src="./js/index.js"></script>
     <script type="text/javascript">
-        var banner = $(".banner_img").height()
-        $('.banner_img img').load(function () {
-            $(".banner").css("height", banner)
-        });
-        //banner消失
+        // var banner = $(".banner_img").height()
+        // console.log(banner)
+        // $('.banner_img img').load(function () {
+        //     $(".banner").css("height", banner)
+        // });
+        // banner消失
         function slideup(){ 
             $(".banner").slideUp();
         } 
