--- a/V1/saishisaicheng3.html
+++ b/V1/saishisaicheng3.html
@@ -12,12 +12,10 @@
     <link rel="stylesheet" href="./css/reset.css">
     <script src="./js/flexible.js"></script>
     <link rel="stylesheet" href="./css/headerfooter.css">
-    <!-- 本页的cssgame.css -->
-    <link rel="stylesheet" href="./css/game.css">
+    <!-- 这是本页面新引入的game3.css -->
+    <link rel="stylesheet" href="./css/game3.css">
     <!-- 本页新增的css right.css -->
     <link rel="stylesheet" href="./css/right.css">
-    <!-- 本页新增的插件progress-bars.css -->
-    <link rel="stylesheet" href="./css/progress-bars.css">
 </head>
 
 <body>
@@ -52,258 +50,10 @@
         </div>
         <div class="container">
             <div class="row clearfix">
-                <div class="game_left game2_left">
-                    <div class="game_title">
-                        <div class="game_title_top">
-                            <div class="game_team1">
-                                <div class="game_team1_img">
-                                    <div class="game_team1_img1">
-                                        <img src="./images/banner.png" alt="" class="imgauto">
-                                    </div>
-                                </div>
-                                <span>WE</span>
-                            </div>
-                            <div class="game_type">
-                                <span class="span1">英雄联盟</span>
-                                <span class="span2">2021 KPL 春季赛</span>
-                                <div class="game_vs">
-                                    <span class="span1">2</span>
-                                    <img src="./images/vs.png" alt="">
-                                    <span class="span2">1</span>
-                                </div>
-                                <p>2021.04.26 18:00·已结束</p>
-                            </div>
-                            <div class="game_team1">
-                                <div class="game_team1_img">
-                                    <div class="game_team1_img1">
-                                        <img src="./images/game_teaml.png" alt="">
-                                    </div>
-                                </div>
-                                <span>WE</span>
-                            </div>
-                        </div>
-                        <div class="game_team_depiction">
-                            <p class="dk1">TeamWE是一家中国电子竞技俱乐部，成立于2005年4月21日，是TeamWE是一家中国电子竞技俱乐部，成立于2005年4月21日，是</p>
-                            <p class="dk">SV电子竞技俱乐部于2016年11月成立。SuperValiant译为超级勇猛...SV电子竞技俱乐部于2016年11月成立。SuperValiant译为超级勇猛...</p>
-                        </div>
-                        <div class="game_detail_item6">
-                            <div class="vs_data3">
-                                <div class="vs_data3_left active vs_data3_pad">
-                                    <p class="title">近6场赛事数据</p>
-                                    <div class="top-data clearfix">
-                                        <div class="l-data fl">
-                                            <span class="win_rate mid">50%</span>
-                                        </div>
-                                        <div class="r-data fr">
-                                            <span class="win_rate mid">70%</span>
-                                        </div>
-                                        <div class="rate">胜率</div>
-                                    </div>
-                                    <div class="compare-bar clearfix">
-                                        <div class="progress3 fl progress4 red">
-                                            <span class="green" style="width: 40%;"></span>
-                                        </div>
-                                        <div class="progress3 fr blue">
-                                            <span class="green" style="width: 60%;"></span>
-                                        </div>
-                                    </div>
-                                    <div class="rate_data">
-                                        <div class="rate_data_item clearfix">
-                                            <div class="fr rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr blue">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="fl rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr grey">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="rate_data_item clearfix">
-                                            <div class="fr rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr blue">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="fl rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr grey">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="rate_data_item clearfix">
-                                            <div class="fr rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr blue">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="fl rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr grey">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="rate_data_item clearfix">
-                                            <div class="fr rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr blue">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="fl rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr grey">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="rate_data_item clearfix">
-                                            <div class="fr rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr blue">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="fl rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr grey">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="rate_data_item clearfix">
-                                            <div class="fr rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr blue">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="fl rate_data_left">
-                                                <div class="rate_data_top">
-                                                    <span class="fl time1">31:05</span>
-                                                    <span class="fr time2">27:59</span>
-                                                    <div class="average_time">场均时长</div>
-                                                </div>
-                                                <div class="compare-bar compare_bar clearfix">
-                                                    <div class="progress3 fl progress4 red">
-                                                        <span class="green" style="width: 40%;"></span>
-                                                    </div>
-                                                    <div class="progress3 fr grey">
-                                                        <span class="green" style="width: 60%;"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                
-                            </div>
+                <div class="game_left game3_left">
+                    <div class="calendar">
+                        <div class="min_calendar">
+
                         </div>
                     </div>
                 </div>
