--- a/V1/saishisaicheng3.html
+++ b/V1/saishisaicheng3.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/reset.css">
     <script src="./js/flexible.js"></script>
     <link rel="stylesheet" href="./css/headerfooter.css">
+    <!-- 本页新增的css iconfont.css -->
+    <link rel="stylesheet" href="./fonts/iconfont.css">
     <!-- 这是本页面新引入的game3.css -->
     <link rel="stylesheet" href="./css/game3.css">
     <!-- 本页新增的css right.css -->
@@ -53,7 +55,72 @@
                 <div class="game_left game3_left">
                     <div class="calendar">
                         <div class="min_calendar">
-
+                            <div class="min_calendar_top clearfix">
+                                <div class="war_calendar fl">
+                                    <div class="war_calendar_img">
+                                        <img src="./images/rili.png" alt="">
+                                    </div>
+                                    <span>对战日历</span>
+                                </div>
+                                <p class="time1">2021.04</p>
+                                <div class="open_calendar fr">
+                                    展开日历
+                                </div>
+                            </div>
+                            <div class="min_calendar_bottom">
+                                <div class="left fl">
+                                   <i class="iconfont icon-shangyige"></i>
+                                </div>
+                                <div class="calendar1">
+                                    <ul>
+                                        <li class="active">
+                                            <a href="##">
+                                                <span class="week">星期一</span>
+                                                <span class="time2">04.26</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="##">
+                                                <span class="week">星期二</span>
+                                                <span class="time2">04.26</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="##">
+                                                <span class="week">星期三</span>
+                                                <span class="time2">04.26</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="##">
+                                                <span class="week">星期四</span>
+                                                <span class="time2">04.26</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="##">
+                                                <span class="week">星期五</span>
+                                                <span class="time2">04.26</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="##">
+                                                <span class="week">星期六</span>
+                                                <span class="time2">04.26</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="##">
+                                                <span class="week">星期日</span>
+                                                <span class="grey">04.26</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="right fr">
+                                    <i class="iconfont icon-xiayige"></i>
+                                 </div>
+                            </div>
                         </div>
                     </div>
                 </div>
