电竞战队team修改锚点链接

--- a/V1/team.html
+++ b/V1/team.html
@@ -15,7 +15,7 @@
     <!-- 本页新增的css right.css -->
     <link rel="stylesheet" href="./css/right.css">
     <!-- 本页新增的css esports.css -->
-    <link rel="stylesheet" href="./css/esports.css">
+    <link rel="stylesheet" href="./css/team.css">
 </head>
 
 <body>
@@ -53,28 +53,28 @@
                 <div class="game_left esports fl">
                     <ul class="esports_ul clearfix">
                         <li class="active">
-                            <a href="##">
+                            <a href="#all">
                                 全部
                             </a>
                         </li>
                         <li>
-                            <a href="##">
+                            <a href="#lol">
                                 英雄联盟
                             </a>
                         </li>
                         <li>
-                            <a href="##">
+                            <a href="#kpl">
                                 王者荣耀
                             </a>
                         </li>
                         <li>
-                            <a href="##">
+                            <a href="#dota2">
                                 DOTA2
                             </a>
                         </li>
                     </ul>
                     <div class="esports_detail">
-                        <div class="esports_item all active">
+                        <div class="esports_item all active" id="all">
                             <ul class="game_team_list_detail">
                                 <li class="active col-xs-6">
                                     <a href="##">
@@ -340,7 +340,7 @@
                                     </a>
                             </div>
                         </div>
-                        <div class="esports_item lol">
+                        <div class="esports_item lol" id="lol">
                             <ul class="game_team_list_detail">
                                 <li class="active col-xs-6">
                                     <a href="##">
@@ -606,7 +606,7 @@
                                     </a>
                             </div>
                         </div>
-                        <div class="esports_item kpl">
+                        <div class="esports_item kpl" id="kpl">
                             <ul class="game_team_list_detail">
                                 <li class="active col-xs-6">
                                     <a href="##">
@@ -872,7 +872,7 @@
                                     </a>
                             </div>
                         </div>
-                        <div class="esports_item dota2">
+                        <div class="esports_item dota2" id="dota2">
                             <ul class="game_team_list_detail">
                                 <li class="active col-xs-6">
                                     <a href="##">
@@ -1141,13 +1141,13 @@
                     </div>
                 </div>
                 <div class="game_right">
-                    <div class="game_lately">
+                    <div class="game_team">
                         <div class="title clearfix">
                             <div class="fl clearfix">
                                 <div class="game_fire fl">
                                     <img class="imgauto" src="./images/game_fire.png" alt="">
                                 </div>
-                                <span class="fl">近期赛事</span>
+                                <span class="fl">热门战队</span>
                             </div>
                             <div class="more fr">
                                 <a href="##">
@@ -1156,83 +1156,77 @@
                                 </a>
                             </div>
                         </div>
-                        <ul class="game_match_ul">
-                            <li class="col-md-12 col-xs-12">
+                        <ul class="game_team_list_detail">
+                            <li class="active col-xs-6">
                                 <a href="##">
-                                    <div class="game_match_top">
-                                        <span class="game_match_name">常规赛常规常规赛常规常规赛常规</span>
-                                        <span class="game_match_time">4月23日 14:00</span>
+                                    <div class="a1">
+                                        <img src="./images/banner.png" alt="" class="game_team_img">
                                     </div>
-                                    <div class="game_match_bottom clearfix">
-                                        <div class="left ov_1">
-                                            <div class="game_match_img">
-                                                <img src="./images/banner.png" alt="" class="imgauto">
-                                            </div>
-                                            <span>常规赛常规常规</span>
-                                        </div>
-                                        <div class="left center">
-                                            <span>VS</span>
-                                            <span>英雄联盟</span>
-                                        </div>
-                                        <div class="left ov_1">
-                                            <div class="game_match_img">
-                                                <img src="./images/match.png" alt="" class="imgauto">
-                                            </div>
-                                            <span>常规赛常规常规</span>
-                                        </div>
-                                    </div>
+                                    <span>WE</span>
                                 </a>
                             </li>
-                            <li class="col-md-12 col-xs-12">
+                            <li>
                                 <a href="##">
-                                    <div class="game_match_top">
-                                        <span class="game_match_name">常规赛常规</span>
-                                        <span class="game_match_time">4月23日 14:00</span>
+                                    <div class="a1">
+                                        <img src="./images/WElogo.png" alt="">
                                     </div>
-                                    <div class="game_match_bottom clearfix">
-                                        <div class="left ov_1">
-                                            <div class="game_match_img">
-                                                <img src="./images/banner.png" alt="" class="imgauto">
-                                            </div>
-                                            <span>常规赛常规常规</span>
-                                        </div>
-                                        <div class="left center">
-                                            <span>VS</span>
-                                            <span>英雄联盟</span>
-                                        </div>
-                                        <div class="left ov_1">
-                                            <div class="game_match_img">
-                                                <img src="./images/match.png" alt="" class="imgauto">
-                                            </div>
-                                            <span>常规赛常规常规</span>
-                                        </div>
-                                    </div>
+                                    <span>WE</span>
                                 </a>
                             </li>
-                            <li class="col-md-12 col-xs-12">
+                            <li>
                                 <a href="##">
-                                    <div class="game_match_top">
-                                        <span class="game_match_name">常规赛常规</span>
-                                        <span class="game_match_time">4月23日 14:00</span>
+                                    <div class="a1">
+                                        <img src="./images/WElogo.png" alt="">
                                     </div>
-                                    <div class="game_match_bottom clearfix">
-                                        <div class="left ov_1">
-                                            <div class="game_match_img">
-                                                <img src="./images/banner.png" alt="" class="imgauto">
-                                            </div>
-                                            <span>常规赛常规常规</span>
-                                        </div>
-                                        <div class="left center">
-                                            <span>VS</span>
-                                            <span>英雄联盟</span>
-                                        </div>
-                                        <div class="left ov_1">
-                                            <div class="game_match_img">
-                                                <img src="./images/match.png" alt="" class="imgauto">
-                                            </div>
-                                            <span>常规赛常规常规</span>
-                                        </div>
+                                    <span>WE</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="##">
+                                    <div class="a1">
+                                        <img src="./images/WElogo.png" alt="">
                                     </div>
+                                    <span>WE</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="##">
+                                    <div class="a1">
+                                        <img src="./images/WElogo.png" alt="">
+                                    </div>
+                                    <span>WE</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="##">
+                                    <div class="a1">
+                                        <img src="./images/WElogo.png" alt="">
+                                    </div>
+                                    <span>WE</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="##">
+                                    <div class="a1">
+                                        <img src="./images/WElogo.png" alt="">
+                                    </div>
+                                    <span>WE</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="##">
+                                    <div class="a1">
+                                        <img src="./images/WElogo.png" alt="">
+                                    </div>
+                                    <span>WE</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="##">
+                                    <div class="a1">
+                                        <img src="./images/WElogo.png" alt="">
+                                    </div>
+                                    <span>WE</span>
                                 </a>
                             </li>
                         </ul>
@@ -1399,12 +1393,12 @@
     <script src="./js/index.js"></script>
     <script src="./js/jquery.lineProgressbar.js"></script>
     <script>
-        $(".esports_ul").on("click","li",function(){
-            $(".esports_ul li").removeClass("active");
-            $(this).addClass("active");
-            $(this).parents(".esports").find(".esports_detail").find(".esports_item").removeClass("active").eq($(this).index()).addClass("active")
-            // $(this).parents(".game_detail_item5").find(".vs_data2").find(".vs_data2_item").removeClass("active").eq($(this).index()).addClass("active")
-        })
+        // $(".esports_ul").on("click","li",function(){
+        //     $(".esports_ul li").removeClass("active");
+        //     $(this).addClass("active");
+        //     $(this).parents(".esports").find(".esports_detail").find(".esports_item").removeClass("active").eq($(this).index()).addClass("active")
+        //     // $(this).parents(".game_detail_item5").find(".vs_data2").find(".vs_data2_item").removeClass("active").eq($(this).index()).addClass("active")
+        // })
     </script>
 </body>
 
