电竞战队team修改一点点16：24

--- a/V1/team.html
+++ b/V1/team.html
@@ -74,7 +74,7 @@
                         </li>
                     </ul>
                     <div class="esports_detail">
-                        <div class="esports_item all active" id="all">
+                        <div class="esports_item all" id="all">
                             <ul class="game_team_list_detail">
                                 <li class="active col-xs-6">
                                     <a href="##">
